more on modular forms

--- a/sigma.tex
+++ b/sigma.tex
@@ -903,14 +903,18 @@ Lastly, one checks that this basis gives us access to the desired collection of 
 
 \section{Modular forms and \texorpdfstring{$MU[6, \infty)$}{MU[6, oo)}--manifolds}\label{SectionEllipticCurvesAndThetaFunctions}
 
-The goal of this Lecture is to give the briefest possible summary of the theory of elliptic curves that covers the topics necessary to us in the coming sections.  Accordingly, we won't cover many topics that a sane introduction to elliptic curves would make a point to cover, and---perhaps worse---we will hardly prove anything.  We will, however, discover a place where ``$C_3 \G$'' appears internally to the theory of elliptic curves, and I hope nonetheless that this will give the arithmetically disinclined reader a foothold on the ``elliptic'' part of ``elliptic cohomology''.
+The first goal of this Lecture is to give the briefest possible summary of the theory of elliptic curves that covers the topics necessary to us in the coming sections.  Accordingly, we won't cover many topics that a sane introduction to elliptic curves would make a point to cover, and---perhaps worse---we will hardly prove anything.  We will, however, discover a place where ``$C_3 \G$'' appears internally to the theory of elliptic curves, and I hope nonetheless that this will give the arithmetically disinclined reader a foothold on the ``elliptic'' part of ``elliptic cohomology''.
 
-To begin, recall that an elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice $\Lambda$ of full rank in $\C$ and forming the quotient \[\C \xrightarrow{\pi_\Lambda} \C / \Lambda =: E_\Lambda.\]  A meromorphic function $f$ on $E_\Lambda$ pulls back to give a meromorphic function $\pi_\Lambda^* f$ on $\C$ which satisfies a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  It follows immediately that there are no holomorphic such functions, save the constants---such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order $2$ at the lattice points and satisfies the periodicity constraints: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on $E_\Lambda$, in the sense that the subsheaf spanned by the algebra generators $\wp_\Lambda$ and $\wp_\Lambda'$ is exactly $\pi_\Lambda^* \sheaf M_{E_\Lambda}$.  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - g_2(\Lambda) \wp_\Lambda(z) - g_3(\Lambda),\] for some special values $g_2(\Lambda), g_3(\Lambda) \in \C$.  Accordingly, writing $C \subseteq \CP^2$ for the projective curve $wy^2 = 4x^3 - g_2(\Lambda) w^2 x - g_3(\Lambda) w^3$, there is an analytic group isomorphism
+To begin, recall that an elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice $\Lambda$ of full rank in $\C$ and forming the quotient \[\C \xrightarrow{\pi_\Lambda} \C / \Lambda =: E_\Lambda.\]  A meromorphic function $f$ on $E_\Lambda$ pulls back to give a meromorphic function $\pi_\Lambda^* f$ on $\C$ which satisfies a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  It follows immediately that there are no holomorphic such functions, save the constants---such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order $2$ at the lattice points and satisfies the periodicity constraints: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on $E_\Lambda$, in the sense that the subsheaf spanned by the algebra generators $\wp_\Lambda$ and $\wp_\Lambda'$ is exactly $\pi_\Lambda^* \sheaf M_{E_\Lambda}$.  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - 60G_4(\Lambda) \wp_\Lambda(z) - 140G_6(\Lambda),\] for some special values $G_4(\Lambda), G_6(\Lambda) \in \C$.  Accordingly, writing $C \subseteq \CP^2$ for the projective curve $wy^2 = 4x^3 - G_4(\Lambda) w^2 x - G_6(\Lambda) w^3$, there is an analytic group isomorphism
 \begin{align*}
 E_\Lambda & \to C, \\
 z \pmod \Lambda & \mapsto [1: \wp_\Lambda(z): \wp_\Lambda'(z)].
 \end{align*}
 This is sometimes referred to as the \index{Weierstrass presentation}\textit{Weierstrass presentation} of $E_\Lambda$.
+
+\begin{remark}\label{MFRemark}
+Before proceeding, the values $G_4(\Lambda)$ and $G_6(\Lambda)$ are themselves interesting when considered as functions of the lattice.  Expanding out the relation above gives an explicit formula for the \index{Eisenstein series}\textit{$(2k)${\th} Eisenstein series} \[G_{2k}(\Lambda) = \sum_{\ell \in \Lambda} \frac{1}{\ell^{2k}}, \quad G_{2k}(\lambda \Lambda) = \lambda^{-2k} G_{2k}(\Lambda).\]  A function on the space of lattices which satisfies such a homogeneity condition is referred to as a \index{modular form}\textit{modular form} of weight $2k$, and they appear naturally as global sections over the moduli of elliptic curves on the $2k${\th} tensor power of the sheaf of invariant differentials.  Already, one can deduce that the ring of complex-analytic modular forms has the form $\C[G_4, G_6]$, but it is actually a theorem of Deligne that an analogous theorem is true integrally: there exist modular forms $c_4$, $c_6$, and $\Delta$ such that \[H^0(\moduli{ell}; \omega^{\otimes *}) \cong \Z[c_4, c_6, \Delta^{\pm}] / (c_4^3 - c_6^2 - 2^6 3^3 \Delta).\]
+\end{remark}
 
 There is a second standard embedding of a complex elliptic curve into projective space, using \index{theta function@$\theta$--function}\textit{$\theta$--functions}, which are most naturally expressed with an alternative basic presentation of an elliptic curve.  Select a lattice $\Lambda$ and a basis for it, and rescale the lattice so that the basis takes the form $\{1, \tau\}$ with $\tau$ in the upper half-plane.  Then, the normalized exponential function $\C \to \C^{\times}$ given by $z \mapsto \exp(2 \pi i z)$ has $1 \cdot \Z$ as its kernel.  Setting $q = \exp(2 \pi i \tau)$ to account for the missing component of the kernel of $\pi_\Lambda$, we get a second presentation of $E_\Lambda$ as $\C^\times / q^{\Z}$, as pictured in \Cref{AnnulusPicture}.
 \todo{Should this picture include $q^2$ and $q^{-1}$?}
