todo about a presentation for M_ell

--- a/powerops.tex
+++ b/powerops.tex
@@ -510,6 +510,8 @@ Let $f\co \stack N \to \moduli{fg}$ be a flat, representable morphism of stacks.
 
 Fix a fixed map $f\co \stack N \to \moduli{fg}$, this has its own associated moduli problem of topological enrichments of $f$.
 
+\todo[inline]{Give an explicit presentation for $\moduli{ell}$.  Make sure the names line up with the final subsection of this Lecture.}
+
 \begin{theorem}[{Goerss--Hopkins--Miller~\cite{GoerssHopkins}; Behrens; Lurie~\cite{LurieSurveyOfEll}}]
 \citeme{Behrens from the tmf volume; Hopkins--Miller from the tmf volume}
 The moduli of topological enrichments of $\moduli{ell}$, the moduli of elliptic curves, is contractible.
@@ -759,7 +761,7 @@ Consider the \v{C}ech complex associated to the affine cover $\moduli{Weier} \to
 \end{figure}
 
 \begin{example}
-We now appeal to basic results about $\moduli{ell} \times \Spec \Z[1/6]$ to compute $\pi_* TMF[1/6]$ using these methods.\footnote{This is admittedly a rather elaborate way of recovering the homotopy of the \emph{complex-orientable} ring spectrum $\TMF[1/6]$.}  After inverting $2$ and $3$, we can use scaling and translation transformations to complete both the cube and the square, replacing an arbitrary Weierstrass curve with a \emph{unique} one of the form $y^2 = x^3 + c_4 x + c_6$.  This exhausts the morphisms in the groupoid $\moduli{ell}$: the map \[\Spec \Z[c_4, c_6, \Delta^{-1}][1/6] \to \moduli{ell} \times \Spec \Z[1/6]\] is an equivalence of stacks.  Since the quasicoherent sheaf cohomology of affines is always amplitude $0$, this spectral sequence is concentrated on the $0$--line, and we recover \[\pi_* \TMF[1/6] \cong \Z[c_4, c_6, \Delta^{-1}][1/6].\]
+We now appeal to basic results about $\moduli{ell} \times \Spec \Z[1/6]$ to compute $\pi_* TMF[1/6]$ using these methods.\footnote{This is admittedly a rather elaborate way of recovering the homotopy of the \emph{complex-orientable} ring spectrum $\TMF[1/6]$.}  After inverting $2$ and $3$, we can use scaling and translation transformations to complete both the cube and the square, replacing an arbitrary Weierstrass curve with a \emph{unique} one of the form $y^2 = x^3 + c_4 x + c_6$.  This exhausts the morphisms in the groupoid $\moduli{ell}$: the map \[\Spec \Z[c_4, c_6, \Delta^{-1}][1/6] \to \moduli{ell} \times \Spec \Z[1/6]\] is an equivalence of stacks (cf.\ \Cref{MFRemark}).  Since the quasicoherent sheaf cohomology of affines is always amplitude $0$, this spectral sequence is concentrated on the $0$--line, and we recover \[\pi_* \TMF[1/6] \cong \Z[c_4, c_6, \Delta^{-1}][1/6].\]
 \end{example}
 
 
