typo in R-W argument

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -541,7 +541,7 @@ B_j & = \beta_{(n-j)}^{-1} A_j.
 \end{align*}
 Noting that $A_n = A$ and $J_n = J$, we will inductively show that $J_j$ is a regular ideal of $A_j$.  The case $j = 1$ is simple: $J_1$ is a nonzero principal ideal in a ring without zerodivisors, so it must be regular.
 
-Assume the inductive result holds below some index $j$.  In the quotient sequence \[0 \to \Susp^{|\beta_{(n-j)}|} A_j \xrightarrow{\beta_{(n-j)}} A_j \to A_{j-1} \to 0,\] the degree shift in the multiplication map (and induction on degree) shows that if $J_{j-1}$ is regular on $A_{j-1}$, then $J_{j-1}$ is automatically regular on $A_j$.  If we additionally prove that $J_{j-1}$ is prime on $A_j$ and that $r_{n-j+1} \ne 0$ in the quotient, then $A_j / A_{j-1}$ is an integral domain and multiplication by $r_{n-j+1}$ would be injective and we would be done.  In the degree $|r_{n-j+1}|$ of interest, there is an isomorphism $(A)_{|r_{n-j+1}|} \cong (A_j / J_{j-1})_{|r_{n-j+1}|}$, and hence $r_{n-j+1} \ne 0$ as desired.
+Assume the inductive result holds below some index $j$.  In the quotient sequence \[0 \to \Susp^{|\beta_{(n-j)}|} A_j \xrightarrow{\beta_{(n-j)}} A_j \to A_{j-1} \to 0,\] the degree shift in the multiplication map (and induction on degree) shows that if $J_{j-1}$ is regular on $A_{j-1}$, then $J_{j-1}$ is automatically regular on $A_j$.  If we additionally prove that $J_{j-1}$ is prime on $A_j$ and that $r_{n-j+1} \ne 0$ in the quotient, then $A_j / J_{j-1}$ would be an integral domain, multiplication by $r_{n-j+1}$ would be injective, and we would be done.  In the degree $|r_{n-j+1}|$ of interest, there is an isomorphism $(A)_{|r_{n-j+1}|} \cong (A_j / J_{j-1})_{|r_{n-j+1}|}$, and hence $r_{n-j+1} \ne 0$ as desired.
 
 We thus turn to primality.  Note first that $J_{j-1}$ is automatically prime in $B_j$, since $B_j$ is a polynomial $\F_p[\beta_{(n-j)}^\pm]$--algebra and each of the generators of $J_{j-1}$ is one of these polynomial generators of $B_j$.  Suppose for contradiction that $J_{j-1}$ is not prime in $A_j$, as witnessed by some elements $x, y \not\in J_{j-1}$ satisfying $xy \in J_{j-1}$.  Since $J_{j-1}$ \emph{is} prime in $B_j$, (by perhaps trading $x$ and $y$) there is some minimum $k > 0$ such that \[\beta_{(n-j)}^{\circ k} \circ x \in J_{j-1}.\]  We may as well assume $k = 1$, which we can arrange by tucking the stray factors of $\beta_{(n-j)}$ into $x$.  Invoking the generators of $J_{j-1}$, we thus have an equation \[\beta_{(n-j)} \circ x = \sum_{i = 1}^{j-1} a_i \circ r_{n-i+1}\] with $a_i \in A_j$ not all divisible by $\beta_{(n-j)}$.  In fact, by moving elements onto the left-hand side we can assume that if $a_i \ne 0$ then $a_i \not\in J_{i-1}$.  In $A_{j-1}$, this equation becomes \[0 = \sum_{i=1}^{j-1} a_i \circ r_{n-i+1}\] with $a_i$ not all in $J_{i-1}$.  This is the desired contradiction, since $J_{j-1}$ is regular in $A_{j-1}$ by inductive hypothesis.
 \end{proof}
