--- a/main.bib
+++ b/main.bib
@@ -1294,6 +1294,16 @@ MRREVIEWER = {J. F. Adams},
 MRREVIEWER = {A. Liulevicius},
 }
 
+@article{LRS,
+  title={Periodic cohomology theories defined by elliptic curves},
+  author={Landweber, Peter S and Ravenel, Douglas C and Stong, Robert E},
+  journal={Contemporary Mathematics},
+  volume={181},
+  pages={317--317},
+  year={1995},
+  publisher={American Mathematical Society}
+}
+
 @incollection {LawsonAbVars,
     AUTHOR = {Lawson, Tyler},
      TITLE = {An overview of abelian varieties in homotopy theory},
