--- a/intro.tex
+++ b/intro.tex
@@ -66,9 +66,9 @@ There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $Z$ 
 
 \noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.
 
-Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the Tate elliptic curve; and a decade later Ando, Hopkins, and Strickland put all these together in the following theorem:\citeme{Landweber--Ravenel--Stong, Morava's \textit{Forms of $K$--theory}, and Ando--Hopkins--Strickland}
+Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
-\begin{theorem}[Ando--Hopkins--Strickland]
+\begin{theorem}[{\cite[Theorem 2.59]{AHSTheoremOfTheCube}}]
 If $E$ is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra $M\String \to E$ called the $\sigma$--orientation (for $E$).  Additionally, there is an elliptic spectrum $K^{\Tate}$ whose $\sigma$--orientation gives Witten's genus $M\String_* \to K^{\Tate}_*$ . \qed
 \end{theorem}
 
